    (Namit Jain via zshao)

    HIVE-679. Adding the basic JDBC methods to allow querying using the
    SQuirrelSQL tool. (Bill Graham via rmurthy)

    HIVE-811. Fix Javadocs. (Namit Jain via zshao)

    HIVE-813. Show the actual exception thrown in UDF evaluation
    (Zheng Shao via rmurthy)

    HIVE-756. Performance improvement for RCFile and ColumnarSerDe in Hive.
    (Ning Zhang via zshao)

  OPTIMIZATIONS

  BUG FIXES

    HIVE-734. problem while inserting nulls. (Ning Zhang via namit)

    HIVE-769. Bug in partition pruner checking. (Zheng Shao via namit)
    
    HIVE-773. Remove lzocodec import from FileSinkOperator.
    (He Yongqiang via johan)

    HIVE-769. Bug in partition pruner checking - bug in patch. 
    (Zheng Shao via namit)

    HIVE-782. Bug in reducer progress (Raghu Murthy via namit)
  
    HIVE-780. Better error messages for wrong argument lengths in UDAFs
    (Zheng Shao via namit)

    HIVE-790. race conditions with script and union operators
    (Ning Zhang via namit)

    HIVE-798. remove UDAFSum and UDAFCount
    (Zheng Shao via namit)

    HIVE-778. add describe for div
    (Ning Zhang via namit)

    HIVE-755. Driver NullPointerException when calling getResults without first compiling
    (Eric Hwang via namit)

    HIVE-752. Bug in shimLoader for HWI server (Edward Capriolo via namit)

    HIVE-810. add test and annotation for jdbc udf (Edward Capriolo via namit)

    HIVE-812. Hive compiled with ant package works with all supported hadoop versions
    (Zheng Shao via namit)

Release 0.4.0 -  Unreleased

  INCOMPATIBLE CHANGES

    HIVE-143. Remove the old file based metastore, in favour of the
    RDBMS based metastore. (prasadc via johan)

    HIVE-724. Change HiveServer.getSchema() to return Hive types rather
    than Thrift types. Changed existing getSchema() to getThriftSchema()
    (Eric Hwang via rmurthy)

  NEW FEATURES

    HIVE-354. UDF for length of a string. (Neil Conway via namit).
